--- a/llama_stack/templates/nutanix/build.yaml
+++ b/llama_stack/templates/nutanix/build.yaml
@@ -3,7 +3,7 @@ distribution_spec:
   description: Use Nutanix AI Endpoint for running LLM inference
   providers:
     inference: remote::nutanix
-    memory: meta-reference
-    safety: meta-reference
-    agents: meta-reference
-    telemetry: meta-reference
+    memory: inline::faiss
+    safety: inline::llama-guard
+    agents: inline::meta-reference
+    telemetry: inline::meta-reference
